[gd_scene load_steps=2 format=3 uid="uid://crqejamup7txo"]

[ext_resource type="Script" uid="uid://bsgjne2n64g36" path="res://map/mini_map.gd" id="1_hgrid"]

[node name="MiniMap" type="CanvasLayer"]
script = ExtResource("1_hgrid")

[node name="MapTexture" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="ClickArea" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.2)
